# floorball-penalty-timekeeping

./: LICENSE  README.rst  main.py  pyproject.toml  requirements.txt
src/floorball_penalty_timekeeping/: __init__.py  app.py  cli.py  io.py  timekeeping.py  utils.py  views.py
tests/: test_timekeeping.py
tests/data/: datasets.json
