[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "LICENSE*",
    "tests/",
]
exclude = ["docs/_build"]

[project]
name = "floorball_penalty_timekeeping"
dynamic = ["version", "description"]
readme = "README.rst"
authors = [
    {name = "Francesco Witte", email = "f.witte@floorball-sh.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "streamlit",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/fwitte/floorball-penalty-timekeeping"
"Issue Tracker" = "https://github.com/fwitte/floorball-penalty-timekeeping"

[project.optional-dependencies]
dev = [
    "build",
    "flit",
    "isort",
    "pytest",
]

[project.scripts]
timekeeping = "floorball_penalty_timekeeping.cli:program_run"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --tb=short
    --pyargs
"""
testpaths = [
    "src/",
    "tests/",
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "floorball_penalty_time"
default_section = "THIRDPARTY"
